dark mode fixed and components editted

--- a/src/index.css
+++ b/src/index.css
@@ -1,16 +1,3 @@
 @import "tailwindcss";
+@custom-variant dark (&:where(.dark, .dark *));
 
-body {
-    margin: 0;
-    padding: 0;
-  }
-  
-  #root {
-    min-height: 100vh;
-    width: 100%;
-    background-color: white;
-  }
-  
-  .dark #root {
-    background-color: rgb(17 24 39);
-  }
